Ops/upgrade pom (#107)