@@ -2,12 +2,13 @@ package org.drugis.addis;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.commons.io.IOUtils;
+import org.apache.commons.compress.utils.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
 
 import static junit.framework.TestCase.assertTrue;
+import static junit.framework.TestCase.fail;
 
 /**
  * Created by connor on 2/12/14.
@@ -27,12 +28,11 @@ public class TestUtils {
   public static String loadResource(Class clazz, String filename) {
     try {
       InputStream stream = clazz.getResourceAsStream(filename);
-      return IOUtils.toString(stream, "UTF-8");
+      return new String(stream.readAllBytes());
     } catch (IOException e) {
       e.printStackTrace();
-      assertTrue(false);
     }
-    return "";
+    throw new RuntimeException("Failed to load class resource");
   }
 
   public static String buildPataviTaskJson(String id) {
